[gd_scene load_steps=5 format=3 uid="uid://baa4dpok3q11u"]

[ext_resource type="Script" path="res://Master/Scripts/quiz_manager.gd" id="1_rdmkw"]
[ext_resource type="Texture2D" uid="uid://c5roca0hquy8o" path="res://Master/Assets/Art/Characters/sprite_gabawa.png" id="2_xybll"]
[ext_resource type="Theme" uid="uid://23vydv7l5n4g" path="res://Master/Godot Assets/theme-quiz.tres" id="3_csm0c"]
[ext_resource type="Texture2D" uid="uid://4pko4o445ilj" path="res://Master/Assets/Art/Backgrounds/sprite_textBubble-export.png" id="4_syvw0"]

[node name="Quiz Main" type="CanvasLayer"]
script = ExtResource("1_rdmkw")

[node name="Character" type="TextureRect" parent="."]
offset_left = -40.0
offset_top = 216.0
offset_right = 344.0
offset_bottom = 608.0
texture = ExtResource("2_xybll")
expand_mode = 1
stretch_mode = 4

[node name="Dialog Box" type="NinePatchRect" parent="."]
texture_filter = 1
offset_left = 120.0
offset_right = 1088.0
offset_bottom = 184.0
texture = ExtResource("4_syvw0")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 64
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 48

[node name="Question" type="Label" parent="Dialog Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_csm0c")
text = "Sample Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button Container" type="GridContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -384.0
offset_right = 328.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 64
theme_override_constants/v_separation = 32
columns = 2

[node name="Button1" type="Button" parent="Button Container"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme = ExtResource("3_csm0c")
text = "Sample Text"

[node name="Button2" type="Button" parent="Button Container"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme = ExtResource("3_csm0c")
text = "Sample Text"

[node name="Button3" type="Button" parent="Button Container"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme = ExtResource("3_csm0c")
text = "Sample Text"

[node name="Button4" type="Button" parent="Button Container"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme = ExtResource("3_csm0c")
text = "Sample Text"

[connection signal="pressed" from="Button Container/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button Container/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button Container/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button Container/Button4" to="." method="_on_button_4_pressed"]
